--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_tts: ^3.5.3
+  flutter_webview_plugin: ^0.4.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
