--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  auto_size_text: ^3.0.0
   flutter_tts: ^3.5.3
   flutter_webview_plugin: ^0.4.0
-  auto_size_text: ^3.0.0
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
