--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,4 @@ app.*.map.json
 /android/app/release
 windows/flutter/generated_plugin_registrant.cc
 lib/app/drawer.dart
-lib/data/mocked_data/acronyms.json
-lib/data/mocked_data/alphabet.json
+lib/screens/quiz_page/quiz_page_old.dart
