--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-windows/flutter/generated_plugin_registrant.cc
+lib/main_test.dart
