--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_bloc: ^8.1.1
   dio: ^4.0.6
   path: ^1.8.1
+  sqflite: ^2.0.3+1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
