--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ macos/Flutter/GeneratedPluginRegistrant.swift
 windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugin_registrant.h
 windows/flutter/generated_plugins.cmake
+lib/screens/home_page/home_page_old.dart
