--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   auto_size_text: ^3.0.0
   flutter_tts: ^3.5.3
-  flutter_webview_plugin: ^0.4.0
   flutter_bloc: ^8.1.1
   dio: ^4.0.6
   path: ^1.8.1
@@ -45,6 +44,7 @@ dependencies:
   get_it: ^7.2.0
   json_annotation: ^4.7.0
   google_fonts: ^3.0.1
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +58,14 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   json_serializable: ^6.5.4
   build_runner: ^2.3.2
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+  adaptive_icon_foreground: "assets/logo_foreground.png"
+  adaptive_icon_background: "#77B277"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -72,13 +80,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
-    - assets/flutter_logo.png
-    - assets/dart_logo.png
-    - assets/logo-a.png
-    - assets/acronymous-name.png
-    - assets/background-letters.png
-    
+    - assets/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
