Fix add answer in guizPage, play letters on question start

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   json_annotation: ^4.7.0
   google_fonts: ^3.0.1
   webview_flutter: ^3.0.4
+  shared_preferences: ^2.0.15
+  pin_code_fields: ^7.4.0
 
 dev_dependencies:
   flutter_test:
