--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugin_registrant.h
 windows/flutter/generated_plugins.cmake
 lib/screens/home_page/home_page_old.dart
+lib/services/app_preferences.dart
