Change drawer and about page

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@ lib/main_test.dart
 lib/data/jsons/
 lib/services/app_preferences.dart
 macos/Flutter/GeneratedPluginRegistrant.swift
+linux/flutter/generated_plugin_registrant.cc
+linux/flutter/generated_plugins.cmake
+macos/Flutter/GeneratedPluginRegistrant.swift
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugins.cmake
