--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   webview_flutter: ^3.0.4
   shared_preferences: ^2.0.15
   pin_code_fields: ^7.4.0
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
